UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_RingCentral_Qualification__c/ftr_RingCentral_Qualification__c.object-meta.xml
<CustomObject>
    <label>ftr_RingCentral_Qualification</label>
    <nameField>
        <label>ftr_RingCentral_Qualification Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ftr_RingCentral_Qualifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>