UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_RingCentral_Qualification__c/fields/isRingCentral__c.field-meta.xml
<CustomField>
    <fullName>isRingCentral__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isRingCentral</label>
    <type>Checkbox</type>
</CustomField>