UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_RingCentral_Qualification__c/fields/isSuccess__c.field-meta.xml
<CustomField>
    <fullName>isSuccess__c</fullName>
    <label>isSuccess</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>