UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_RingCentral_Qualification__c/fields/LATA__c.field-meta.xml
<CustomField>
    <fullName>LATA__c</fullName>
    <label>LATA</label>
    <length>10</length>
    <type>Text</type>
</CustomField>