UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_RingCentral_Qualification__c/fields/NPA__c.field-meta.xml
<CustomField>
    <fullName>NPA__c</fullName>
    <label>NPA</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>