UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_RingCentral_Qualification__c/fields/OCN_Name__c.field-meta.xml
<CustomField>
    <fullName>OCN_Name__c</fullName>
    <label>OCN Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>