UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_RingCentral_Qualification__c/fields/QuoteId__c.field-meta.xml
<CustomField>
    <fullName>QuoteId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>QuoteId</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>ftr_RingCentral_Qualifications</relationshipLabel>
    <relationshipName>ftr_RingCentral_Qualifications</relationshipName>
    <type>Lookup</type>
</CustomField>