UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_RingCentral_Qualification__c/fields/Rate_Center__c.field-meta.xml
<CustomField>
    <fullName>Rate_Center__c</fullName>
    <label>Rate Center</label>
    <length>100</length>
    <type>Text</type>
</CustomField>